--- a/index.html
+++ b/index.html
@@ -24,26 +24,13 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
-        <div>
-          <form>
-            <label for="midName">Your Middle Name:</label>
-            <input type="text" id="midName" name="midName"><br>
-            <label for="fPet">Your First Pet:</label>
-            <input type="text" id="fPet" name ="fPet"><br>
-            <label for="mBirYear" >Your Mother's Birth Year:</label>
-            <input type="text" id="mBirYear" name="mBirYear"><br>
-            <label for="favColor">Your Favorite Color:</label>
-            <input type="text" id="favColor" name="favColor"><br>
-            <label for="favAnimal">Your Favorite Animal</label>
-            <input type="text" id="favAnimal" name="favAnimal"><br>
-            <label for="favNumber">Your Favorite Number:</label>
-            <input type="text" id="favNumber" name="favNumber"><br><br><br>
-            <input type="submit" value="Submit">
-          </form>
-        </div>
         <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
+          <button id="generateRandom" class="btn">Generate Random Password</button>
+          <section id="formAreaRandom"></section>
+          <button id="generateMnemonic" class="btn">Generate Mnemonic Password</button>
+          <section id="formAreaMnemonic"></section>
         </div>
+        
       </div>
     </div>
     <script src="script.js"></script>
